--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,6 +2,12 @@
 Base Rules
 	A Base rule is applied to an element using an element selector, a descendent selector, or a child selector, along with any pseudoclasses. It doesn’t include any class or ID selectors. It is defining the default styling for how that element should look in all occurrences on the page.
 */
+html {
+    background-color: $background-color;
+    animation: colorchange-background 5s linear 1s infinite alternate;
+}
+
+
 
 body {
     color: $color;
@@ -17,3 +23,4 @@ body {
 h1, h2 {
     @include headline-font;
 }
+
