--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -7,11 +7,17 @@ Layout Rules
 nav[role="navigation"] {
     text-align: right;
 }
-nav[role="navigation"] ul {
-    margin: 12px 0 0 0; 
+nav[role="navigation"] ul, .contact ul {
+    list-style-type: none;
+    margin: 0; 
     padding: 0;
 }
-nav[role="navigation"] ul li {
+
+nav[role="navigation"] ul {
+    margin-top: 12px;
+}
+
+nav[role="navigation"] ul li, .contact ul li {
     display: inline-block;
     margin: 0;
     padding: 0;
@@ -19,6 +25,21 @@ nav[role="navigation"] ul li {
 
 header[role="banner"]{
     margin: 30px 0 100px 0;
+}
+
+.contact svg {
+    width: 24px;
+    height: 24px;
+}
+
+.contact svg path{
+    fill: $background-color;
+    transition: fill 400ms linear;
+}
+
+.contact a:hover svg path{
+    fill: darken($background-color, 12%);
+    transition: fill 400ms linear;
 }
 
 .banner-photo {
