--- a/scss/_module.scss
+++ b/scss/_module.scss
@@ -94,3 +94,11 @@ main[role="main"] h1 {
     animation: colorchange-font 5s linear 1s infinite alternate;
     padding: 0 8px;
 }
+
+footer[role="contentinfo"] {
+    @include reversed-text;
+    animation: colorchange-font 5s linear 1s infinite alternate;
+    @include body-font-italic;
+    line-height: 1;
+    padding: 4px 8px 8px 8px;
+}
