--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -45,6 +45,11 @@ font-weight: 300;
     font-weight: 400;
 }
 
+@mixin reversed-text {
+    background-color: $color;
+    color: $background-color;
+}
+
 @keyframes colorchange-background {
     0% { background-color: $background-color;}
     50% { background-color: $background-color-alternate;}
